--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
         <title>my title</title>
     </head>
     <body>
-        <p>my body</p>
+        <p>these are the changes in my html bracnh
+            
+        </p>
         <script src="./js/app"></script>
     </body>
 </html>
