--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
                 <p>challenge 2</p>
             </div>
             <div class="col">
-                <img class="profile-img" src="./img/profile-img-placeholder.png" alt="">
-                <p>challenge 1</p>
-                <p>challenge 2</p>
+                <img class="profile-img" src="./img/jonathan.jpg" alt="jonathan's photo">
+                <p>Challenge 1: Reversing User input </p>
+                <a href="https://github.com/jestrada56139/seal_reverse_challenge">Challenge 1</a>
+                <p>Challenge 2:Building a Car from User Input</p>
+                <a href="https://github.com/jestrada56139/seal_carBuild_challenge">Challenge 2</a>
             </div>
         </div>
     </div>
