added kayven's photo and links

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <a href="https://github.com/AsarelCastellanos/reverseChallange">Reverse Challenge</a>
                 <a href="https://github.com/AsarelCastellanos/makeACarChallenge">Make A Car Challenge</a>
             </div>
+            <div class="col">
+                <img class="profile-img" src="./img/Kayven.png" alt="Kayven's Photo">
+                <a href="https://github.com/kayvenp2000/seal_reverseChallenge">Reverse Challenge</a>
+                <a href="https://github.com/kayvenp2000/makeACar">Make A Car Challenge</a>
+            </div>
         </div>
     </div>
     <script src="./js/app.js"></script>
