added ricky's photo

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <a href="https://github.com/AsarelCastellanos/reverseChallange">Reverse Challenge</a>
                 <a href="https://github.com/AsarelCastellanos/makeACarChallenge">Make A Car Challenge</a>
             </div>
+            <div class="col">
+                <img class="profile-img" src="./img/OG.jpg" alt=""><br>
+                <a href="https://github.com/ricardomartinez9568/ReverseChallengeSeals.git">Challenge 1</a><br>
+                <a href="https://github.com/ricardomartinez9568/CarBuildChallenge">Challenge 2</a>
+            </div>
         </div>
     </div>
     <script src="./js/app.js"></script>
