--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 <a href="https://github.com/AsarelCastellanos/reverseChallange">Reverse Challenge</a>
                 <a href="https://github.com/AsarelCastellanos/makeACarChallenge">Make A Car Challenge</a>
             </div>
+            <div class="col">
+                <img class="profile-img" src="./img/IMG_2653.jpeg" alt="Luis' Photo">
+                <a href="https://github.com/LuisCristo/Seals-Project-1">Reverse Challenge</a>
+            </div>
         </div>
     </div>
     <script src="./js/app.js"></script>
